nav z-index correction

--- a/style.css
+++ b/style.css
@@ -200,12 +200,13 @@ h4{
     left: 0;
     width: 100vw;
     padding: 16px;
-    z-index: 10;
+    z-index: 40;
     display: flex;
     justify-content: space-between;
     background-color: transparent;
     transition: all 0.25s ease;
     border-bottom: 1px solid transparent;
+    
 
 }
 
